@@ -209,6 +209,117 @@ SCIP_RETCODE writeAllDecompositions(
    return SCIP_OKAY;
 }
 
+
+/** writes out all decompositions currently known to cons_decomp */
+static
+SCIP_RETCODE writeSelectedDecompositions(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_DIALOG*          dialog,             /**< dialog menu */
+   SCIP_DIALOGHDLR*      dialoghdlr,         /**< dialog handler */
+   SCIP_DIALOG**         nextdialog          /**< pointer to store next dialog to execute */
+   )
+{
+   char filename[SCIP_MAXSTRLEN];
+   char dirname[SCIP_MAXSTRLEN];
+   char* tmp;
+   SCIP_Bool endoffile;
+
+   if( SCIPconshdlrDecompGetNFinishedDecomps(scip) == 0 )
+   {
+      SCIPdialogMessage(scip, NULL, "No decomposition to write, please read or detect one first.\n");
+      SCIPdialoghdlrClearBuffer(dialoghdlr);
+      *nextdialog = NULL;
+      return SCIP_OKAY;
+   }
+
+   SCIP_CALL( SCIPdialoghdlrGetWord(dialoghdlr, dialog, "enter directory: ", &tmp, &endoffile) );
+
+
+   if( endoffile )
+   {
+      *nextdialog = NULL;
+      return SCIP_OKAY;
+   }
+
+   SCIPdebugMessage("dirname: %s\n", tmp);
+
+   strcpy(dirname, tmp);
+
+   SCIP_CALL( SCIPdialoghdlrAddHistory(dialoghdlr, dialog, tmp, TRUE) );
+
+   /* if no directory is specified, initialize it with a standard solution */
+   if( dirname[0] == '\0' )
+   {
+      strcpy(dirname, "selecteddecompositions/");
+   }
+
+   /* make sure directory exists */
+   mkdir(dirname, S_IRWXU | S_IRWXG | S_IRWXO);
+
+   SCIP_CALL( SCIPdialoghdlrGetWord(dialoghdlr, dialog, "enter extension: ", &tmp, &endoffile) );
+   strcpy(filename, tmp);
+
+   if( filename[0] != '\0' )
+   {
+      char* extension;
+      extension = filename;
+      SCIP_CALL( SCIPdialoghdlrAddHistory(dialoghdlr, dialog, extension, TRUE) );
+
+      do
+      {
+         SCIP_RETCODE retcode = DECwriteSelectedDecomps(scip, dirname, extension);
+
+         if( retcode == SCIP_FILECREATEERROR )
+         {
+            SCIPdialogMessage(scip, NULL, "error creating files\n");
+            SCIPdialoghdlrClearBuffer(dialoghdlr);
+            break;
+         }
+         else if( retcode == SCIP_WRITEERROR )
+         {
+            SCIPdialogMessage(scip, NULL, "error writing files\n");
+            SCIPdialoghdlrClearBuffer(dialoghdlr);
+            break;
+         }
+         else if( retcode == SCIP_PLUGINNOTFOUND )
+         {
+            /* ask user once for a suitable reader */
+            if( extension == NULL )
+            {
+               SCIPdialogMessage(scip, NULL, "no reader for requested output format\n");
+
+               SCIPdialogMessage(scip, NULL, "following readers are avaliable for writing:\n");
+               displayReaders(scip, FALSE, TRUE);
+
+               SCIP_CALL( SCIPdialoghdlrGetWord(dialoghdlr, dialog,
+                     "select a suitable reader by extension (or return): ", &extension, &endoffile) );
+
+               if( extension[0] == '\0' )
+                  break;
+            }
+            else
+            {
+               SCIPdialogMessage(scip, NULL, "no reader for output in <%s> format\n", extension);
+               extension = NULL;
+            }
+         }
+         else
+         {
+            /* check for unexpected errors */
+            SCIP_CALL( retcode );
+
+            /* print result message if writing was successful */
+            SCIPdialogMessage(scip, NULL, "written all decompositions %s\n", extension);
+            break;
+         }
+      }
+      while (extension != NULL );
+   }
+
+   return SCIP_OKAY;
+}
+
+
 /** writes a family tree of the current seeeds
  * @returns SCIP return code */
 static
@@ -989,6 +1100,7 @@ SCIP_DECL_DIALOGEXEC(GCGdialogExecOptimize)
    return SCIP_OKAY;
 }
 
+
 /** dialog execution method for writing all known decompositions */
 static
 SCIP_DECL_DIALOGEXEC(GCGdialogExecWriteAllDecompositions)
@@ -998,6 +1110,25 @@ SCIP_DECL_DIALOGEXEC(GCGdialogExecWriteAllDecompositions)
    if( SCIPgetStage(scip) >= SCIP_STAGE_PROBLEM )
    {
       SCIP_CALL( writeAllDecompositions(scip, dialog, dialoghdlr, nextdialog, TRUE, TRUE) );
+   }
+   else
+      SCIPdialogMessage(scip, NULL, "no problem available\n");
+
+   *nextdialog = SCIPdialoghdlrGetRoot(dialoghdlr);
+
+   return SCIP_OKAY;
+}
+
+
+/** dialog execution method for writing selected decompositions */
+static
+SCIP_DECL_DIALOGEXEC(GCGdialogExecWriteSelectedDecompositions)
+{
+   SCIP_CALL( SCIPdialoghdlrAddHistory(dialoghdlr, dialog, NULL, FALSE) );
+
+   if( SCIPgetStage(scip) >= SCIP_STAGE_PROBLEM )
+   {
+      SCIP_CALL( writeSelectedDecompositions(scip, dialog, dialoghdlr, nextdialog ) );
    }
    else
       SCIPdialogMessage(scip, NULL, "no problem available\n");
@@ -1063,8 +1194,6 @@ SCIP_DECL_DIALOGEXEC(GCGdialogExecWriteFamilyTree)
 
    return SCIP_OKAY;
 }
-
-
 
 
 /** dialog execution method for writing the original matrix */
@@ -1751,6 +1880,18 @@ SCIP_RETCODE SCIPincludeDialogGcg(
       SCIP_CALL( SCIPaddDialogEntry(scip, submenu, dialog) );
       SCIP_CALL( SCIPreleaseDialog(scip, &dialog) );
    }
+
+   /* write selecteddecompositions */
+     if( !SCIPdialogHasEntry(submenu, "selecteddecompositions") )
+     {
+        SCIP_CALL( SCIPincludeDialog(scip, &dialog, NULL, GCGdialogExecWriteSelectedDecompositions, NULL, NULL,
+              "selecteddecompositions",
+              "write selected (in \"explore\" submenu) decompositions to files (format is given by file extension, e.g. {dec,blk,ref,gp,tex})",
+              FALSE, NULL) );
+        SCIP_CALL( SCIPaddDialogEntry(scip, submenu, dialog) );
+        SCIP_CALL( SCIPreleaseDialog(scip, &dialog) );
+     }
+
 
    /* write original decompositions */
    if( !SCIPdialogHasEntry(submenu, "alloriginaldecompositions") )
